# financier-be

./: .gitignore  README.md  pyproject.toml  runner.bat
financier/: app.py
financier-be/: app.py
financier-be/config/: config.py
financier-be/functions/: fastapi_lambda.py
financier-be/functions_stack/: functions_stack.py
financier/apigw_stack/: apigw_stack.py
financier/config/: gw_paths.py
financier/dynamodb_stack/: dynamodb_stack.py
financier/functions/: fastapi_lambda.py
financier/functions/features/expense/: expense.py  model.py
financier/functions/features/income/: income.py  model.py
financier/functions/shared/response/: headers.py
financier/functions_stack/: functions_stack.py
financier/functions_stack/layers/: requirements.txt
financier/s3_fe_stack/: s3_fe_stack.py
tests/: test_sample.py
tests/test_functions/: test_fastapi_lambda.py
