[tool.poetry]
name = "financier-be"
version = "0.1.0"
description = "AWS-FastAPI backend code for Financier"
authors = ["Ariel Catli <dev.arielcatli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}
pytest = "^8.3.3"
pytest-sugar = "^1.0.0"
ruff = "^0.8.1"
black = "^24.10.0"
mypy = "^1.13.0"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
aws-cdk-lib = "2.148.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
